Implementando o principal método da classe ListItem